# anyrun-swaywin

./: Cargo.toml  README.md  default.nix  flake.nix
src/: lib.rs
swayipc-test/: main.rs
